Update pages to include route to /legal in sidebar.

--- a/templates/learn-offline.html
+++ b/templates/learn-offline.html
@@ -55,6 +55,7 @@
                     <li class="nav-item"><a class="nav-link link-body-emphasis" href="/news">CS in the news</a></li>
                     <li class="nav-item"><a class="nav-link link-body-emphasis" href="/learn-offline">Learn CS offline</a></li>
                     <li class="nav-item"><a class="nav-link link-body-emphasis" href="/feedback">Feedback</a></li>
+                    <li class="nav-item"><a class="nav-link link-body-emphasis" href="/legal">Legal info</a></li>
                 </ul>
             </div>
 
