--- a/templates/news.html
+++ b/templates/news.html
@@ -47,30 +47,28 @@
 
     <!-- News Content Section -->
     <div class="container">
-        <div class="row">
-            <div class="col">
-                <!-- Subsection heading for AI news -->
-                <h2>Artificial Intelligence (AI)</h2>
-                <!-- List of news items related to AI -->
-                <ul class="list-group">
-                    <li class="list-group-item"><span>{News item 1}</span></li>
-                    <li class="list-group-item"><span>{News item 2}</span></li>
-                    <li class="list-group-item"><span>{News item 3}</span></li>
-                </ul>
-            </div>
+        {% for category, articles in extracted_news.items() %}
+        <div class="table-responsive">
+            <table class="table table-striped table-hover">
+                <thead>
+                <tr>
+                    <th>{{ category }}</th>  <!-- Category as header -->
+                </tr>
+                </thead>
+                <tbody>
+                {% for article in articles %}  <!-- Loop through articles -->
+                <tr>
+                    <td>
+                        <strong>{{ article.title }}</strong><br>
+                        {{ article.description or "No description available" }}<br>
+                        <a href="{{ article.url }}" target="_blank">Link</a>
+                    </td>
+                </tr>
+                {% endfor %}
+                </tbody>
+            </table>
         </div>
-        <div class="row">
-            <div class="col">
-                <!-- Subsection heading for Quantum Computing news -->
-                <h2>Quantum computing</h2>
-                <!-- List of news items related to Quantum Computing -->
-                <ul class="list-group">
-                    <li class="list-group-item"><span>{News item 1}</span></li>
-                    <li class="list-group-item"><span>{News item 2}</span></li>
-                    <li class="list-group-item"><span>{News item 3}</span></li>
-                </ul>
-            </div>
-        </div>
+        {% endfor %}
     </div>
 
     <!-- Offcanvas Menu Section -->
