--- a/templates/news.html
+++ b/templates/news.html
@@ -47,7 +47,7 @@
 
     <!-- News Content Section -->
     <div class="container">
-        {% for category, articles in extracted_news.items() %}
+        {% for category, articles in extracted_news.items() %}  <!-- key, value in dictionary -->
         <div class="table-responsive">
             <table class="table table-striped table-hover">
                 <thead>
